--- a/.github/workflows/create-jira-issue.yml
+++ b/.github/workflows/create-jira-issue.yml
@@ -1,4 +1,5 @@
 name: Create Jira issue
+
 on:
   issues:
     types:
@@ -13,32 +14,34 @@ jobs:
   create-issue:
     name: Create Jira issue
     runs-on: ubuntu-latest
+
     steps:
-      - name: Login
+      - name: Login to Jira
         uses: atlassian/gajira-login@v3
         env:
           JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
           JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
           JIRA_USER_EMAIL: ${{ secrets.JIRA_USER_EMAIL }}
 
-      - name: Checkout main code
-        uses: actions/checkout@v4
-        with:
-          ref: main
-
-      - name: Issue Parser
-        uses: stefanbuck/github-issue-praser@v3
-        id: issue-parser
-        with:
-          template-path: .github/ISSUE_TEMPLATE/issue-form.yml
-
-      - name: Log Issue Parser
+      # 🔥 parentKey를 body에서 직접 추출 (parser 제거)
+      - name: Extract parent key from issue body
+        id: extract-parent
         run: |
-          echo '${{ steps.issue-parser.outputs.issueparser_parentKey }}'
-          echo '${{ steps.issue-parser.outputs.__ticket_number }}'
-          echo '${{ steps.issue-parser.outputs.jsonString }}'
+          BODY="${{ github.event.issue.body }}"
+          PARENT=$(echo "$BODY" | grep -A1 "상위 작업" | tail -n1 | tr -d '\r' | xargs)
+          echo "PARENT_KEY=$PARENT" >> $GITHUB_ENV
+          echo "Extracted parent key: $PARENT"
 
-      - name: Convert markdown to Jira Syntax
+      # 🔥 브랜치명도 body에서 직접 추출
+      - name: Extract branch name
+        id: extract-branch
+        run: |
+          BODY="${{ github.event.issue.body }}"
+          BRANCH=$(echo "$BODY" | grep -A1 "브랜치명" | tail -n1 | tr -d '\r' | xargs)
+          echo "BRANCH_NAME=$BRANCH" >> $GITHUB_ENV
+          echo "Extracted branch name: $BRANCH"
+
+      - name: Convert markdown to Jira syntax
         uses: peter-evans/jira2md@v1
         id: md2jira
         with:
@@ -49,7 +52,7 @@ jobs:
             ${{ github.event.issue.body }}
           mode: md2jira
 
-      - name: Create Issue
+      - name: Create Jira issue
         id: create
         uses: atlassian/gajira-create@v3
         with:
@@ -60,34 +63,35 @@ jobs:
           fields: |
             {
               "parent": {
-                "key": "${{ steps.issue-parser.outputs.issueparser_parentKey }}"
+                "key": "${{ env.PARENT_KEY }}"
               }
             }
 
       - name: Log created issue
-        run: echo "Jira Issue ${{ steps.issue-parser.outputs.parentKey }}/${{ steps.create.outputs.issue }} was created"
+        run: echo "Jira Issue Created: ${{ steps.create.outputs.issue }}"
 
-      - name: Checkout main code
+      # 🔥 Jira 키 + 브랜치명으로 브랜치 생성
+      - name: Checkout main branch
         uses: actions/checkout@v4
         with:
           ref: main
 
-      - name: Create branch with Ticket number
+      - name: Create branch with Jira key
         run: |
-          ISSUE_NUMBER="${{ steps.create.outputs.issue }}"
-          ISSUE_TITLE="${{ steps.issue-parser.outputs.issueparser_branch}}"
-          BRANCH_NAME="${ISSUE_NUMBER}-$(echo ${ISSUE_TITLE} | sed 's/ /-/g')"
-          git checkout -b "${BRANCH_NAME}"
-          git push origin "${BRANCH_NAME}"
+          ISSUE_KEY="${{ steps.create.outputs.issue }}"
+          BRANCH="${{ env.BRANCH_NAME }}"
+          FINAL_BRANCH="${ISSUE_KEY}-${BRANCH}"
+          git checkout -b "$FINAL_BRANCH"
+          git push origin "$FINAL_BRANCH"
 
-      - name: Update issue title
+      - name: Update GitHub issue title
         uses: actions-cool/issues-helper@v3
         with:
           actions: "update-issue"
           token: ${{ secrets.GITHUB_TOKEN }}
           title: "[${{ steps.create.outputs.issue }}] ${{ github.event.issue.title }}"
 
-      - name: Add comment with Jira issue link
+      - name: Comment Jira link on GitHub issue
         uses: actions-cool/issues-helper@v3
         with:
           actions: "create-comment"
