--- a/.github/workflows/create-jira-issue.yml
+++ b/.github/workflows/create-jira-issue.yml
@@ -1,4 +1,5 @@
 name: Create Jira issue
+
 on:
   issues:
     types:
@@ -11,34 +12,44 @@ permissions:
 
 jobs:
   create-issue:
-    name: Create Jira issue
     runs-on: ubuntu-latest
+
     steps:
-      - name: Login
+      # 1️⃣ Jira 로그인
+      - name: Login to Jira
         uses: atlassian/gajira-login@v3
         env:
           JIRA_BASE_URL: ${{ secrets.JIRA_BASE_URL }}
           JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
           JIRA_USER_EMAIL: ${{ secrets.JIRA_USER_EMAIL }}
 
-      - name: Checkout main code
+      # 2️⃣ 현재 브랜치 기준 checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          ref: main
 
-      - name: Issue Parser
+      # 3️⃣ Issue Form 파싱
+      - name: Parse issue form
         uses: stefanbuck/github-issue-praser@v3
         id: issue-parser
         with:
           template-path: .github/ISSUE_TEMPLATE/issue-form.yml
 
-      - name: Log Issue Parser
+      # 4️⃣ 디버그 로그
+      - name: Debug parser output
         run: |
-          echo '${{ steps.issue-parser.outputs.issueparser_parentKey }}'
-          echo '${{ steps.issue-parser.outputs.__ticket_number }}'
-          echo '${{ steps.issue-parser.outputs.jsonString }}'
+          echo "parentKey => ${{ steps.issue-parser.outputs.issueparser_parentKey }}"
+          echo "branch => ${{ steps.issue-parser.outputs.issueparser_branch }}"
+          echo "json => ${{ steps.issue-parser.outputs.jsonString }}"
 
-      - name: Convert markdown to Jira Syntax
+      # 5️⃣ parentKey 검증
+      - name: Validate parent key
+        if: ${{ steps.issue-parser.outputs.issueparser_parentKey == '' }}
+        run: |
+          echo "Parent key is empty. Failing workflow."
+          exit 1
+
+      # 6️⃣ Markdown → Jira 변환
+      - name: Convert markdown to Jira format
         uses: peter-evans/jira2md@v1
         id: md2jira
         with:
@@ -49,13 +60,8 @@ jobs:
             ${{ github.event.issue.body }}
           mode: md2jira
 
-      - name: Validate parent key
-        if: steps.issue-parser.outputs.issueparser_parentKey == ''
-        run: |
-          echo "Parent key is empty. Failing workflow."
-          exit 1
-
-      - name: Create Issue
+      # 7️⃣ Jira 이슈 생성
+      - name: Create Jira issue
         id: create
         uses: atlassian/gajira-create@v3
         with:
@@ -70,31 +76,32 @@ jobs:
               }
             }
 
-      - name: Log created issue
-        run: echo "Jira Issue ${{ steps.issue-parser.outputs.issueparser_parentKey }}/${{ steps.create.outputs.issue }} was created"
-
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Create branch with Ticket number
+      # 8️⃣ 브랜치 생성 (JiraKey-branchName)
+      - name: Create branch with Jira key
         run: |
-          ISSUE_NUMBER="${{ steps.create.outputs.issue }}"
-          ISSUE_TITLE="${{ steps.issue-parser.outputs.issueparser_branch}}"
-          BRANCH_NAME="${ISSUE_NUMBER}-$(echo ${ISSUE_TITLE} | sed 's/ /-/g')"
-          git checkout -b "${BRANCH_NAME}"
-          git push origin "${BRANCH_NAME}"
+          ISSUE_KEY="${{ steps.create.outputs.issue }}"
+          BRANCH_NAME="${{ steps.issue-parser.outputs.issueparser_branch }}"
+          FINAL_BRANCH="${ISSUE_KEY}-${BRANCH_NAME}"
 
-      - name: Update issue title
+          git config user.name "github-actions"
+          git config user.email "github-actions@github.com"
+
+          git checkout -b "$FINAL_BRANCH"
+          git push origin "$FINAL_BRANCH"
+
+      # 9️⃣ GitHub 이슈 제목에 Jira 키 붙이기
+      - name: Update GitHub issue title
         uses: actions-cool/issues-helper@v3
         with:
-          actions: "update-issue"
+          actions: update-issue
           token: ${{ secrets.GITHUB_TOKEN }}
           title: "[${{ steps.create.outputs.issue }}] ${{ github.event.issue.title }}"
 
-      - name: Add comment with Jira issue link
+      # 🔟 Jira 링크 코멘트 추가
+      - name: Comment Jira link
         uses: actions-cool/issues-helper@v3
         with:
-          actions: "create-comment"
+          actions: create-comment
           token: ${{ secrets.GITHUB_TOKEN }}
           issue-number: ${{ github.event.issue.number }}
           body: "Jira Issue Created: [${{ steps.create.outputs.issue }}](${{ secrets.JIRA_BASE_URL }}/browse/${{ steps.create.outputs.issue }})"
