chore: update deploy docs and workflow

--- a/.github/workflows/deploy-ec2-docker.yml
+++ b/.github/workflows/deploy-ec2-docker.yml
@@ -79,10 +79,22 @@ jobs:
           ECR_REGISTRY: ${{ secrets.AWS_ACCOUNT_ID }}.dkr.ecr.${{ env.AWS_REGION }}.amazonaws.com
           IMAGE_TAG_INPUT: ${{ github.event.inputs.image_tag }}
           PROJECT_NAME: oplust
+          DB_NAME: oplust
+          RDS_ENDPOINT: ${{ secrets.RDS_ENDPOINT }}
+          DB_USERNAME: ${{ secrets.DB_USERNAME }}
+          DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+          API_USER_ENV: ${{ secrets.API_USER_ENV }}
+          API_ADMIN_ENV: ${{ secrets.API_ADMIN_ENV }}
+          TRANSCODER_ENV: ${{ secrets.TRANSCODER_ENV }}
         run: |
           set -euo pipefail
 
           IMAGE_TAG="${IMAGE_TAG_INPUT:-${GITHUB_SHA}}"
+
+          if [ -z "${RDS_ENDPOINT}" ] || [ -z "${DB_USERNAME}" ] || [ -z "${DB_PASSWORD}" ]; then
+            echo "RDS_ENDPOINT, DB_USERNAME, DB_PASSWORD secrets are required" >&2
+            exit 1
+          fi
 
           deploy_service() {
             local target_tag="$1"
@@ -90,6 +102,13 @@ jobs:
             local container_name="$3"
             local env_file="$4"
             local port="$5"
+            local env_payload="$6"
+
+            local full_env_payload
+            full_env_payload=$(printf 'SPRING_DATASOURCE_URL=jdbc:mysql://%s:3306/%s\nSPRING_DATASOURCE_USERNAME=%s\nSPRING_DATASOURCE_PASSWORD=%s\n%s' "${RDS_ENDPOINT}" "${DB_NAME}" "${DB_USERNAME}" "${DB_PASSWORD}" "${env_payload}")
+
+            local env_payload_b64
+            env_payload_b64="$(printf '%s' "$full_env_payload" | base64 -w0)"
 
             if [ -n "$port" ]; then
               run_cmd="sudo docker run -d --name ${container_name} --restart unless-stopped -p ${port}:${port} --env-file ${env_file} ${image_uri}"
@@ -103,6 +122,9 @@ jobs:
               --comment "Deploy ${container_name}:${IMAGE_TAG}" \
               --parameters commands="[
                 \"set -e\",
+                \"sudo mkdir -p /etc/oplust\",
+                \"echo '${env_payload_b64}' | base64 -d | sudo tee ${env_file} >/dev/null\",
+                \"sudo chmod 600 ${env_file}\",
                 \"aws ecr get-login-password --region $AWS_REGION | sudo docker login --username AWS --password-stdin $ECR_REGISTRY\",
                 \"sudo docker pull ${image_uri}\",
                 \"sudo docker rm -f ${container_name} || true\",
@@ -114,6 +136,6 @@ jobs:
               --output text >/dev/null
           }
 
-          deploy_service "${PROJECT_NAME}-user-ec2" "${ECR_REGISTRY}/oplust-api-user:${IMAGE_TAG}" "oplust-api-user" "/etc/oplust/api-user.env" "8080"
-          deploy_service "${PROJECT_NAME}-admin-ec2" "${ECR_REGISTRY}/oplust-api-admin:${IMAGE_TAG}" "oplust-api-admin" "/etc/oplust/api-admin.env" "8081"
-          deploy_service "${PROJECT_NAME}-worker-ec2" "${ECR_REGISTRY}/oplust-transcoder:${IMAGE_TAG}" "oplust-transcoder" "/etc/oplust/transcoder.env" ""
+          deploy_service "${PROJECT_NAME}-user-ec2" "${ECR_REGISTRY}/oplust-api-user:${IMAGE_TAG}" "oplust-api-user" "/etc/oplust/api-user.env" "8080" "${API_USER_ENV}"
+          deploy_service "${PROJECT_NAME}-admin-ec2" "${ECR_REGISTRY}/oplust-api-admin:${IMAGE_TAG}" "oplust-api-admin" "/etc/oplust/api-admin.env" "8081" "${API_ADMIN_ENV}"
+          deploy_service "${PROJECT_NAME}-worker-ec2" "${ECR_REGISTRY}/oplust-transcoder:${IMAGE_TAG}" "oplust-transcoder" "/etc/oplust/transcoder.env" "" "${TRANSCODER_ENV}"
